--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,24 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Inter:wght@400;700&family=Nunito+Sans:wght@400;700;800;900&display=swap');
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root{
+  --backgroundColor: #00022D;
+  --backgroundColorLight: #000450;
+  --textColorLight: #AFB9FA;
+  --textColorDark: #222222;
+  --title: #464BDC;
+  --textBtnColor: #E4E5F9;
+  --btnColor: #3D43BC;
+}
+
+body {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 16px;
 }
 
 a {
@@ -35,8 +26,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+img {
+  max-width: 100%;
+  height: auto;
 }
+
