--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Inter:wght@400;700&family=Nunito+Sans:wght@400;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:wght@400;700&family=Nunito+Sans:wght@400;700;800;900&display=swap');
 
 * {
   margin: 0;
@@ -9,11 +10,14 @@
 :root{
   --backgroundColor: #00022D;
   --backgroundColorLight: #000450;
+  --backgroundColorWhite: #EFF0FF;
   --textColorLight: #AFB9FA;
   --textColorDark: #222222;
+  --textColorWhite: #DDE2FF;
   --title: #464BDC;
   --textBtnColor: #E4E5F9;
   --btnColor: #3D43BC;
+  --smallTextColor: #5F69BE;
 }
 
 body {
