--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,10 @@
 .container {
   background-color: var(--backgroundColor);
   overflow-x: hidden;
-  /* display: flex; */
-  /* justify-content: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
 
 .main {
@@ -19,10 +21,6 @@
   height: 5rem;
 }
 
-.intro {
-  text-align: left;
-}
-
 .intro h1 {
   font-size: 3.375rem;
   font-weight: bold;
@@ -30,15 +28,30 @@
   line-height: 120%;
   letter-spacing: 2%;
   text-align: center;
-}
-
-.vadym_foto {
-  margin-bottom: -0.5rem;
+  margin: 0 1rem;
 }
 
 .vadym_about {
-  padding: 1.5rem;
-  width: 21.375rem;
+  position: relative;
+  max-width: 100%;
+  width: 375px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.vadym_foto {
+  width: 343px;
+  object-fit: cover;
+}
+
+.wave_icon {
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  top: 12px;
+  right: 18px; 
 }
 
 .intro_heading, .intro_name {
@@ -50,6 +63,7 @@
 
 .intro_heading {
   font-size: 4rem;
+  margin-top: -3rem;
 }
 
 .intro_name {
@@ -61,6 +75,7 @@
   line-height: 150%;
   letter-spacing: 2%;
   color: var(--textColorLight);
+  margin: 1.5rem 0;
 }
 
 .action_text {
@@ -78,6 +93,7 @@
   line-height: 150%;
   letter-spacing: 2%;
   color: var(--textColorLight);
+  margin-bottom: 1.5rem;
 }
 
 .intro_description {
@@ -87,41 +103,8 @@
   color: var(--textColorWhite);
 }
 
-/* .eidos {
-  background-color: var(--backgroundColorLight);
-  padding: 1.5rem 1.1rem;
-  text-align: center;
-}
 
-.eidos article, .eidos h3 {
-  font-size: 2rem;
-  font-weight: bold;
-  letter-spacing: 2%;
-  color: var(--textColorWhite);
-}
-
-.eidos article {
-  line-height: 2.25rem;
-}
-
-.eidos h3 {
-  line-height: 3rem;
-}
-
-.eidos_img {
-  width: 3.25rem;
-  height: 3.25rem;
-}
-
-.eidos_cta {
-  font-family: 'Figtree', 'Catamaran', sans-serif;
-  font-size: 1rem;
-  line-height: 160%;
-  letter-spacing: 0%;
-  color: var(--textColorLight);
-} */
-
-.subscribe_container {
+/* .subscribe_container {
   display: flex;
   border: 1px solid var(--btnColor); 
   border-radius: 8px;
@@ -167,4 +150,4 @@
 
 .substack {
   color: var(--smallTextColor);
-}
+} */
