teacher section without slider

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,6 +21,10 @@
   height: 5rem;
 }
 
+.intro {
+  font-family: 'Figtree', 'Catamaran', sans-serif;
+}
+
 .intro h1 {
   font-size: 3.375rem;
   font-weight: bold;
@@ -28,6 +32,7 @@
   line-height: 120%;
   letter-spacing: 2%;
   text-align: center;
+  max-width: 23.75rem;
   margin: 0 1rem;
 }
 
@@ -103,6 +108,89 @@
   color: var(--textColorWhite);
 }
 
+.teacher {
+  background-color: var(--backgroundColorLight);
+  max-width: 100%;
+  width: 375px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  /* width: 100vw;
+  position: relative;
+  left: 50%; 
+  transform: translateX(-50%);  */
+}
+
+.teacher h1 {
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 120%;
+  letter-spacing: 2%;
+  text-transform: uppercase;
+  color: var(--textColorLight);
+  margin: 1.5rem 0;
+}
+
+.teacher h2 {
+  font-family: 'Figtree', 'Catamaran', sans-serif;
+  font-size: 1.25rem;
+  font-weight: bold;
+  line-height: 150%;
+  letter-spacing: 2%;
+  color: var(--textColorLight);
+}
+
+.teacher p {
+  font-family: 'Figtree', 'Catamaran', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  letter-spacing: 0%;
+  color: var(--textColorWhite);
+  margin: 1rem 0;
+}
+
+.teacher_cta {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  flex-wrap: nowrap;
+}
+
+.cta_btn {
+  background-color: var(--btnColor);
+  color: var(--textBtnColor);
+  border-radius: 24px;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 100%;
+  letter-spacing: 4%;
+  transition: transform 0.2s, background-color 0.2s;
+  width: 9.25rem;
+  height: 3.125rem;
+}
+
+.cta_btn:hover {
+  background-color: var(--btnColorHover);
+}
+
+.cta_btn:active {
+  background-color: var(--btnColorClick);
+}
+
+.cta_btn a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: inherit;
+}
 
 /* .subscribe_container {
   display: flex;
