--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -268,6 +268,127 @@
   margin-bottom: 1rem;
 }
 
+.writer {
+  background-color: var(--backgroundColor);
+  padding: 1rem;
+  max-width: 100%;
+  width: 480px;
+}
+
+.writer_header {
+  font-size: 2rem;
+  font-weight: 900;
+  color: var(--textColorLight);
+  line-height: 120%;
+  letter-spacing: 0.32px;
+  text-transform: uppercase;
+}
+
+.book_img {
+  padding: 1.5rem 2rem;
+}
+
+.writer_about {
+  font-family: 'Figtree', 'Catamaran', sans-serif;
+  font-size: 1.25rem;
+  font-weight: bold;
+  line-height: 30px;
+  letter-spacing: 0.4px;
+  margin-bottom: 0.5rem;
+  color: var(--textColorLight);
+}
+
+.writer_content {
+  font-family: 'Figtree', 'Catamaran', sans-serif;
+  font-size: 1rem;
+  line-height: 160%;
+  letter-spacing: 0;
+  margin-bottom: 1.6rem;
+  color: var(--textColorWhite);
+}
+
+.writer_cta {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 3rem;
+}
+
+.btn_book {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 1rem;
+  background-color: var(--btnColor);
+  color: var(--textBtnColor);
+  border-radius: 100px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 100%;
+  letter-spacing: 0.64px;
+  transition: transform 0.2s, background-color 0.2s;
+  width: auto;
+  max-width: max-content;
+}
+
+.btn_book_manning {
+  margin-bottom: 1.5rem;
+}
+
+.btn_book a {
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  color: inherit;
+  text-decoration: none;
+}
+
+.writer_eidos {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: fit-content;
+}
+
+.writer_eidos img {
+  max-width: 100%;
+  height: auto;
+}
+
+.main_img {
+  position: relative;
+  z-index: 1;
+}
+
+.eidos_icon {
+  position: absolute;
+  top: 78%;
+  left: 1%;
+  z-index: 2;
+}
+
+.cloud {
+  position: absolute;
+  top: 1%;
+  left: 90%;
+  width: 20%;
+  z-index: 2;
+}
+
+
+
+/* .btn_book_manning {
+  width: 12.3rem;
+  height: 3.25rem;
+}
+
+.btn_book_amazon {
+  width: 11.7rem;
+  height: 3.25;
+} */
+
 /* .subscribe_container {
   display: flex;
   border: 1px solid var(--btnColor); 
