--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,11 +6,11 @@
   margin: 0;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 375px) and (max-width: 1023px) {
 
 .main {
   width: 100%;
-  max-width: 480px;
+  max-width: 1023px;
   margin: 0 auto;
 }
 
@@ -131,8 +131,8 @@
 .teacher {
   background-color: var(--backgroundColorLight);
   padding: 1.5rem 1rem;
-  max-width: 100%;
-  width: 480px;
+  /* max-width: 100%;
+  width: 480px; */
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -208,6 +208,10 @@
   color: inherit;
 }
 
+.cta_btn span {
+  padding-top: 1px;
+}
+
 .slider {
   background-color: var(--backgroundColorWhite);
   border-radius: 16px;
@@ -281,8 +285,8 @@
 .writer {
   background-color: var(--backgroundColor);
   padding: 1rem;
-  max-width: 100%;
-  width: 480px;
+  /* max-width: 100%; */
+  /* width: 480px; */
 }
 
 .writer_header {
@@ -324,9 +328,17 @@
   margin-bottom: 3rem;
 }
 
+.writer_eidos_wrapper {
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
 .btn_book {
   display: inline-flex;
   align-items: center;
+  align-self: flex-start;
   justify-content: center;
   cursor: pointer;
   padding: 1rem;
@@ -342,6 +354,14 @@
   max-width: max-content;
 }
 
+.btn_book:hover {
+  background-color: var(--btnColorHover);
+}
+
+.btn_book:active {
+  background-color: var(--btnColorClick);
+}
+
 .btn_book_manning {
   margin-bottom: 1.5rem;
 }
@@ -354,12 +374,17 @@
   text-decoration: none;
 }
 
+.btn_book span {
+  padding-top: 2px;
+}
+
 .writer_eidos {
   position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column; /* Adjust content layout */
+  align-items: flex-start; /* Align items to the left */
   margin: auto;
-  width: fit-content;
+  width: 100%;
 }
 
 .writer_eidos img {
@@ -367,9 +392,16 @@
   height: auto;
 }
 
+.main_img_wrapper {
+  position: relative;
+  display: inline-block;
+}
+
 .main_img {
   position: relative;
   z-index: 1;
+  width: 100%; /* Ensures the image resizes responsively */
+  /* max-width: 300px; */
 }
 
 .eidos_icon {
@@ -382,7 +414,7 @@
 .cloud {
   position: absolute;
   top: 1%;
-  left: 90%;
+  left: 91%;
   width: 20%;
   z-index: 2;
 }
@@ -425,6 +457,7 @@
 
 .footer_logo {
   width: 10.4rem;
+  padding-top: 0.375rem;
 }
 
 .footer_logo img {
