--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,8 +5,9 @@
   min-height: 100vh;
   margin: 0;
 }
+/*and (min-width: 375px) */
 
-@media only screen and (min-width: 375px) and (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
 
 .main {
   width: 100%;
@@ -38,8 +39,9 @@
   line-height: 120%;
   letter-spacing: 1.08px;
   text-align: center;
-  max-width: 26rem;
+  /* max-width: 26rem; */
   margin: 0 auto;
+  padding: 1.5rem;
 }
 
 .vadym_about {
