--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,6 @@
   min-height: 100vh;
   margin: 0;
 }
-/*and (min-width: 375px) */
 
 @media only screen and (max-width: 1023px) {
 
@@ -65,11 +64,7 @@
   justify-content: center;
   margin: auto;
   width: fit-content;
-}
-
-.vadym_foto {
-  position: relative;
-  z-index: 1;
+  padding-bottom: 2rem;
 }
 
 .wave_icon {
@@ -78,6 +73,19 @@
   left: 85%;
   width: 20%;
   z-index: 2;
+}
+
+.vadym_foto {
+  position: relative;
+  z-index: 1;
+}
+
+.introImg_text {
+  position: absolute;
+  bottom: -7%; 
+  left: 0%; 
+  color: var(--title);
+  z-index: 3;
 }
 
 .intro_heading, .intro_name {
@@ -102,7 +110,7 @@
   line-height: 150%;
   letter-spacing: 0.64px;
   color: var(--textColorLight);
-  margin: 1.5rem 0;
+  margin: 3.3rem 0 1rem;
 }
 
 .action_text {
@@ -301,7 +309,11 @@
 }
 
 .book_img {
-  padding: 1.5rem 2rem;
+  /* padding: 1.5rem 2rem; */
+  display: block;
+  margin: 0 auto;
+  height: 23rem;
+  width: auto;
 }
 
 .writer_about {
@@ -310,7 +322,7 @@
   font-weight: bold;
   line-height: 30px;
   letter-spacing: 0.4px;
-  margin-bottom: 0.5rem;
+  margin: 1.5rem 0 0.5rem 0;
   color: var(--textColorLight);
 }
 
