--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -43,38 +43,18 @@
   height: 5rem;
 }
 
-@media only screen and (max-width: 1023px) {
-
-.main {
-  width: 100%;
-  max-width: 1023px;
-  margin: 0 auto;
-}
-
-.header {
-  padding: 1.5rem 0;
-}
-
-.logo {
-  display: block;
-  margin: 0 auto;
-}
-
 .intro {
   font-family: 'Figtree', 'Catamaran', sans-serif;
   background-color: var(--backgroundColor);  
 }
 
 .intro h1 {
-  font-size: 3.375rem;
   font-weight: bold;
   color: var(--textColorWhite);
   line-height: 120%;
   letter-spacing: 1.08px;
   text-align: center;
-  /* max-width: 26rem; */
-  margin: 0 auto;
-  padding: 1.5rem;
+  margin: 0 auto; 
 }
 
 .vadym_about {
@@ -83,8 +63,6 @@
   width: fit-content;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
-  padding: 1.5rem 0;
 }
 
 .vadym_about img {
@@ -144,12 +122,10 @@
   line-height: 150%;
   letter-spacing: 0.64px;
   color: var(--textColorLight);
-  margin: 3.3rem 0 1rem;
 }
 
 .action_text {
   text-transform: uppercase;
-  font-size: 2.625rem;
   font-weight: bold;
   font-style: italic;
   line-height: 150%;
@@ -174,22 +150,18 @@
 
 .teacher {
   background-color: var(--backgroundColorLight);
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
 }
 
-.teacher h1 {
+.teacher h1{
   font-size: 2rem;
   font-weight: 800;
   line-height: 120%;
   letter-spacing: 0.64px;
   text-transform: uppercase;
   color: var(--textColorLight);
-  margin: 0 0 1.5rem 0;
-}
+} 
 
 .teacher h2 {
   font-family: 'Figtree', 'Catamaran', sans-serif;
@@ -207,7 +179,6 @@
   line-height: 160%;
   letter-spacing: 0;
   color: var(--textColorWhite);
-  margin: 1rem 0;
 }
 
 .teacher_cta {
@@ -258,8 +229,6 @@
 .slider {
   background-color: var(--backgroundColorWhite);
   border-radius: 16px;
-  padding: 1.5px;
-  margin-top: 1.5rem;
   padding: 1.5rem;
 }
 
@@ -367,18 +336,57 @@
   color: var(--textColorWhite);
 }
 
-.writer_cta {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-bottom: 3rem;
-}
-
 .writer_eidos_wrapper {
   display: flex;
   flex-direction: column; 
   align-items: flex-start;
   gap: 0.5rem;
+}
+
+.writer_cta {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.writer_eidos {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  margin: auto;
+  width: 100%;
+}
+
+.writer_eidos img {
+  max-width: 100%;
+  height: auto;
+}
+
+.main_img_wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.main_img {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
+
+.eidos_icon {
+  position: absolute;
+  top: 78%;
+  left: 1%;
+  z-index: 2;
+}
+
+.cloud {
+  position: absolute;
+  top: 1%;
+  left: 91%;
+  width: 20%;
+  z-index: 2;
 }
 
 .btn_book {
@@ -424,52 +432,94 @@
   padding-top: 2px;
 }
 
-.writer_eidos {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; 
-  margin: auto;
-  width: 100%;
-}
-
-.writer_eidos img {
-  max-width: 100%;
-  height: auto;
-}
-
-.main_img_wrapper {
-  position: relative;
-  display: inline-block;
-}
-
-.main_img {
-  position: relative;
-  z-index: 1;
-  width: 100%;
-}
-
-.eidos_icon {
-  position: absolute;
-  top: 78%;
-  left: 1%;
-  z-index: 2;
-}
-
-.cloud {
-  position: absolute;
-  top: 1%;
-  left: 91%;
-  width: 20%;
-  z-index: 2;
-}
-
 .btn_doer {
   padding: 0.8rem 1.5rem;
 }
 
 .teamLead {
   display: flex;
+}
+
+.teamLead_col img {
+  max-height: 100%;
+  max-width: 100%; 
+}
+
+@media only screen and (max-width: 1023px) {
+
+.main {
+  width: 100%;
+  max-width: 1023px;
+  margin: 0 auto;
+}
+
+.header {
+  padding: 1.5rem 0;
+}
+
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
+.intro h1 {
+  font-size: 3.375rem;
+  padding: 1.5rem;
+}
+
+.vadym_about {
+  flex-direction: column;
+  padding: 1.5rem 0;
+}
+
+.intro_subheading {
+  margin: 3.3rem 0 1rem;
+}
+
+.action_text {
+  font-size: 2.625rem;
+}
+
+.teacher {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  flex-direction: column;
+}
+
+.teacher h1 {
+  margin: 0 0 1.5rem 0;
+}
+
+.teacher_introduction {
+  margin: 1rem 0;
+}
+
+.slider {
+  margin-top: 1.5rem;
+}
+
+.writer {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.writer_header {
+  margin-bottom: 1.5rem;
+}
+
+.writer_about {
+  margin: 1.5rem 0 0.5rem 0;
+}
+
+.writer_content {
+  margin-bottom: 1.6rem;
+}
+
+.writer_cta {
+  margin-bottom: 3rem;
+}
+
+.teamLead {
   flex-direction: row;
   gap: 4rem;
 }
@@ -484,11 +534,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-}
-
-.teamLead_col img {
-  max-height: 100%;
-  max-width: 100%; 
 }
 
 .footer {
