--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -39,6 +39,18 @@
   }
 }
 
+@media (min-width: 1440px) {
+
+  .header,
+  .intro,
+  .teacher,
+  .writer,
+  .doer,
+  .footer {
+    padding: 0 17rem;
+  }
+}
+
 .header {
   background-color: var(--backgroundColor);
 }
@@ -437,6 +449,10 @@
   padding-top: 2px;
 }
 
+.doer img {
+  width: auto;
+}
+
 .btn_doer {
   padding: 0.8rem 1.5rem;
 }
@@ -476,6 +492,17 @@
 
 .footer_logo img {
   height: 2.5rem;
+}
+
+.footer_socialMedia {
+  display: flex;
+  gap: 1.5rem;
+  width: 10.4rem;
+}
+
+.footer_socialMedia a {
+  display: inline-block;
+  transition: transform 0.3s ease;
 }
 
 @media only screen and (max-width: 1023px) {
@@ -571,17 +598,6 @@
 
   .footer_logo {
     padding-top: 0.375rem;
-  }
-
-  .footer_socialMedia {
-    display: flex;
-    gap: 1.5rem;
-    width: 10.4rem;
-  }
-
-  .footer_socialMedia a {
-    display: inline-block;
-    transition: transform 0.3s ease;
   }
 }
 
@@ -777,5 +793,10 @@
   .teamLead_col div {
     height: fit-content;
     margin-bottom: 2rem;
+  }
+
+  .footer {
+    justify-content: space-between;
+    padding: 3rem 16rem;
   }
 }
