--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: var(--backgroundColor);
+}
+
 :root{
   --backgroundColor: #00022D;
   --backgroundColorLight: #000450;
